--- a/package.json
+++ b/package.json
@@ -3,21 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/blueimp-md5": "^2.18.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.59",
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
+    "@types/react-redux": "^7.1.24",
+    "@types/redux": "^3.6.0",
     "antd": "^4.23.4",
+    "axios": "^1.1.3",
+    "blueimp-md5": "^2.19.0",
+    "craco-sass-resources-loader": "^1.1.0",
     "customize-cra": "^1.0.0",
     "react": "^18.2.0",
     "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
-    "sass-resources-loader": "^2.2.5",
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
     "typescript": "*",
     "web-vitals": "^2.1.4"
   },
@@ -52,6 +62,10 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-react": "^7.31.8"
+    "eslint-plugin-react": "^7.31.8",
+    "node-sass": "^7.0.3",
+    "sass-loader": "^13.1.0",
+    "sass-resources-loader": "^2.2.5",
+    "scss": "^0.2.4"
   }
 }
